odsApi_versioned_docs/version-5.4/getting-started/binary-installation/sandbox-installation-steps.mdx
---
title: Sandbox Installation Steps
sidebar_position: 2
---

# Sandbox Installation Steps

This section describes how to set up the Ed-Fi ODS / API v5.4 in sandbox mode. Before you proceed, make sure you have installed prerequisites listed in [Getting Started - Binary Installation](https://edfi.atlassian.net/wiki/spaces/ODSAPIS3V54/pages/22774182/Getting+Started+-+Binary+Installation).

## Contents

- [Sandbox Installation Steps](#sandbox-installation-steps)
  - [Contents](#contents)
  - [Step 1. Download the Ed-Fi ODS / API Installer Packages](#step-1-download-the-ed-fi-ods--api-installer-packages)
    - [Package Links](#package-links)
  - [Step 2. Install the Ed-Fi Databases](#step-2-install-the-ed-fi-databases)
    - [Edit the configuration.json File](#edit-the-configurationjson-file)
    - [Run Installation Script](#run-installation-script)
  - [Step 3. Install WebApi](#step-3-install-webapi)
    - [Prepare Installation script](#prepare-installation-script)
    - [Run the Installation Script (Web API)](#run-the-installation-script-web-api)
  - [Step 4. Install Swagger](#step-4-install-swagger)
    - [Prepare Installation Script](#prepare-installation-script-1)
    - [Run the Installation Script (Swagger UI)](#run-the-installation-script-swagger-ui)
  - [Step 5. Install SandboxAdmin (for Sandbox Mode Only)](#step-5-install-sandboxadmin-for-sandbox-mode-only)
    - [Prepare Installation Script](#prepare-installation-script-2)
    - [Run the Installation Script (Sandbox Admin)](#run-the-installation-script-sandbox-admin)
  - [Step 6. Restart your Website](#step-6-restart-your-website)

---

## Step 1. Download the Ed-Fi ODS / API Installer Packages

The Ed-Fi ODS / API installation packages can be downloaded from the following links:

### Package Links

The required release packages to install the Ed-Fi ODS / API can be found at the links below. We recommend you stay current with the latest patch update that has been promoted to [release](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging?_a=feed&feed=EdFi@Release).

- [EdFi.Suite3.Installer.WebApi](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Installer.WebApi/versions/5.4.57)
- [EdFi.Suite3.Installer.SwaggerUI](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Installer.SwaggerUI/overview/5.4.57)
- [EdFi.Suite3.Installer.SandboxAdmin](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Installer.SandboxAdmin/versions/5.4.59)
- [EdFi.Suite3.RestApi.Databases](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.RestApi.Databases/overview/5.4.2272)

For each of the downloads, **right-click** and select "Properties." Update the file extension (from .nupkg to .zip). Remove the version number (optional). Check the box next to **Unblock** (this will prevent PowerShell from asking for permission to load every module in the installer) and click **OK**.

![Sample.nupkg](https://edfi.atlassian.net/wiki/download/thumbnails/22774213/image2024-7-25_6-28-48.png?version=1&modificationDate=1721906933815&cacheVersion=1&api=v2&width=700&height=942)

:::info
You may need to configure TLS while running the installation scripts described in steps below.

```powershell
[Net.ServicePointManager]::SecurityProtocol += [Net.SecurityProtocolType]::Tls12
```
:::

---

## Step 2. Install the Ed-Fi Databases

Extract the contents of the EdFi.Suite3.RestApi.Databases package. The paths in these instructions assume that the package was extracted to a folder with the name of the package (e.g., C:\temp\EdFi.Suite3.RestApi.Databases).

### Edit the configuration.json File

The basic settings for Microsoft SQL Server deployment are provided in configuration.json and the basic settings for PostgreSQL deployment are provided in configuration.postgreSQL.json file. If deploying to PostgreSQL, delete configuration.json file and rename configuration.postgreSQL.json to configuration.json. Update the settings in the file to fit your needs.

<details>
  <summary>SQL Server</summary>

  ```json
  {
    "ConnectionStrings": {
      "EdFi_Ods": "server=(local);trusted_connection=True;database=EdFi_{0};Application Name=EdFi.Ods.WebApi",
      "EdFi_Security": "server=(local);trusted_connection=True;database=EdFi_Security;persist security info=True;Application Name=EdFi.Ods.WebApi",
      "EdFi_Admin": "server=(local);trusted_connection=True;database=EdFi_Admin;Application Name=EdFi.Ods.WebApi",
      "EdFi_Master": "server=(local);trusted_connection=True;database=master;Application Name=EdFi.Ods.WebApi"
    },
    "ApiSettings": {
      "Mode": "Sandbox",
      "Engine": "SQLServer",
      ...
      "MinimalTemplateScript": "TPDMCoreMinimalTemplate",
      "PopulatedTemplateScript": "TPDMCorePopulatedTemplate"
    }
  }
  ```
</details>

<details>
  <summary>PostgreSQL</summary>

  ```json
  {
    "ConnectionStrings": {
      "EdFi_Ods": "host=localhost;port=5432;username=postgres;database=EdFi_{0};Application Name=EdFi.Ods.WebApi",
      "EdFi_Security": "host=localhost;port=5432;username=postgres;database=EdFi_Security;Application Name=EdFi.Ods.WebApi",
      "EdFi_Admin": "host=localhost;port=5432;username=postgres;database=EdFi_Admin;Application Name=EdFi.Ods.WebApi",
      "EdFi_Master": "host=localhost;port=5432;username=postgres;database=postgres;Application Name=EdFi.Ods.WebApi"
    },
    "ApiSettings": {
      "Mode": "Sandbox",
      "Engine": "PostgreSQL",
      ...
      "MinimalTemplateScript": "TPDMCorePostgreSqlMinimalTemplate",
      "PopulatedTemplateScript": "TPDMCorePostgreSqlPopulatedTemplate"
    }
  }
  ```
</details>

### Run Installation Script

After you edit the configuration.json file, open a PowerShell window in Administrator mode and navigate to the EdFi.Suite3.RestApi.Databases package folder.

Run the following PowerShell command to load modules for installation:

```powershell
Import-Module .\Deployment.psm1
```

Then, execute the following command in PowerShell:

```powershell
Initialize-DeploymentEnvironment
```

---

## Step 3. Install WebApi

Extract the contents of the EdFi.Suite3.Installer.WebApi package. The paths in these instructions assume that the package was extracted to a folder with the name of the package (e.g., `C:\temp\EdFi.Suite3.Installer.WebApi`).

### Prepare Installation script

Open a PowerShell window in Administrator mode and navigate to the EdFi.Suite3.Installer.WebApi package folder and run the following PowerShell command to load modules for installation:

<details>
  <summary>SQL Server</summary>

  ```powershell
  $parameters = @{
      PackageVersion = "5.4.2285"
      DbConnectionInfo = @{
         Engine="SqlServer"
         Server="localhost"
         UseIntegratedSecurity=$true
      }
      InstallType = "Sandbox"   
  }
  ```
</details>

<details>
  <summary>PostgreSQL</summary>

  ```powershell
  $parameters = @{
      PackageVersion = "5.4.2285"
      DbConnectionInfo = @{
         Engine="PostgreSQL"
         Server="localhost"
         Username="postgres"
      }
      InstallType = "Sandbox"   
  }
  ```
</details>

<br/>

Paste the modified parameter code into your PowerShell window and hit Enter.

### Run the Installation Script (Web API)

Next, run the following command in the PowerShell window:

```powershell
Install-EdFiOdsWebApi @parameters
```

---

## Step 4. Install Swagger

Extract the contents of the EdFi.Suite3.Installer.SwaggerUI package. The paths in these instructions assume that the package was extracted to a folder with the name of the package (e.g., C:\temp\EdFi.Suite3.Installer.SwaggerUI).

### Prepare Installation Script

Open a PowerShell window in Administrator mode and navigate to the EdFi.Suite3.Installer.SwaggerUI folder and run the following PowerShell command to load modules for installation:

```powershell
Import-Module .\Install-EdFiOdsSwaggerUI.psm1
```

The Swagger UI installer can take a number of parameters to tailor the install experience (more examples can be found in the Install-EdFiOdsSwaggerUI.psm1 file). At a minimum, WebAPI connection information is required.

Copy and modify the following parameter code to add your site name:

```powershell
$parameters = @{
    PackageVersion = "5.4.2272"
    WebApiVersionUrl = "https://YOUR_SITE_OR_SERVER_NAME_HERE/WebApi"
}
```

Paste the modified parameter into your PowerShell window and execute the code.

### Run the Installation Script (Swagger UI)

Then, run the following command in the PowerShell window:

```powershell
Install-EdFiOdsSwaggerUI @parameters
```

---

## Step 5. Install SandboxAdmin (for Sandbox Mode Only)

Extract the contents of the EdFi.Suite3.Installer.SandboxAdmin package. The paths in these instructions assume that the package was extracted to a folder with the name of the package (e.g., C:\temp\EdFi.Suite3.Installer.SandboxAdmin).

### Prepare Installation Script

Open a PowerShell window in Administrator mode and navigate to the EdFi.Suite3.Installer.SandboxAdmin folder and run the following PowerShell command to load modules for installation:

```powershell
Import-Module .\Install-EdFiOdsSandboxAdmin.psm1
```

The SandboxAdmin installer can take a number of parameters to tailor the install experience (more examples can be found in the Install-EdFiOdsSandboxAdmin.psm1 file). At a minimum, OAuthUrl information is required.

Copy and modify the following parameter code to add your site name:

<details>
  <summary>SQL Server</summary>

  ```powershell
  $parameters = @{
      PackageVersion = "5.4.2285"
      OAuthUrl = "https://YOUR_SITE_OR_SERVER_NAME_HERE/WebApi"
  }
  ```
</details>

<details>
  <summary>PostgreSQL</summary>

  ```powershell
  $parameters = @{
      PackageVersion = "5.4.2285"
      OAuthUrl = "https://YOUR_SITE_OR_SERVER_NAME_HERE/WebApi"
      Engine="PostgreSQL"
  }
  ```
</details>
<br/>
Paste the modified parameter into your PowerShell window and execute the code.

### Run the Installation Script (Sandbox Admin)

Next, run the following command in the PowerShell window:

```powershell
Install-EdFiOdsSandboxAdmin @parameters
```

---

## Step 6. Restart your Website

Just a few more tasks to complete your installation:

* Open IIS (Press the **Windows key** ![Windows logo](https://lh5.googleusercontent.com/o2iqf0j70YV3B-1NQxBFj1Ne-JeToRq5PiZeMtvF05l3jpyp4kseJn-zEs3BULgpAS_TFr8Qyacu5JZkiyXNllygq2EGhPII-PcxYyxkwCUqC4fPhMJ0QbovAD16R7T2StuDemW_) on your keyboard, type **IIS**, select **Internet Information Services (IIS)**, and press **Enter**.
* **Right-click** on the server (alternatively, you can right-click the EdFi web site), and select **Stop**.

  ![Sample SandboxAdmin $parameters for SQL Server](https://edfi.atlassian.net/wiki/download/thumbnails/22774213/image2021-2-12_17-5-39.png?version=1&modificationDate=1641861343847&cacheVersion=1&api=v2&width=546&height=555)

* **Right-click** the server (or EdFi website) again and select **Start**.

  ![Sample SandboxAdmin $parameters for PostgreSQL](https://edfi.atlassian.net/wiki/download/thumbnails/22774213/image2021-2-12_17-7-5.png?version=1&modificationDate=1641861343857&cacheVersion=1&api=v2&width=466&height=555)

You are now ready to use the Ed-Fi ODS / API. The following URLs are available:

| Website | URL |
| ------- | --- |
| Ed-Fi ODS / API | `https://YOUR_SITE_OR_SERVER_NAME_HERE/WebApi` |
| Sandbox Administration (for Sandbox Mode Only) | `https://YOUR_SITE_OR_SERVER_NAME_HERE/SandboxAdmin` |
| Ed-Fi ODS / API Documentation | `https://YOUR_SITE_OR_SERVER_NAME_HERE/SwaggerUI` |

---

