odsApi_versioned_docs/version-6.2/getting-started/binary-installation/sandbox-installation-steps.mdx
---
sidebar_position: 2
---

# Sandbox Installation Steps

This section describes how to set up the Ed-Fi ODS / API in sandbox mode. Before you 
proceed, make sure you have installed prerequisites listed in [Getting Started - Binary Installation](./readme.md).

*   [Step 1. Download the Ed-Fi ODS / API Installer Packages](#step-1-download-the-ed-fi-ods--api-installer-packages)
*   [Step 2. Install the Ed-Fi Databases](#step-2-install-the-ed-fi-databases)
*   [Step 3. Install WebApi](#step-3-install-webapi)
*   [Step 4. Install Swagger](#step-4-install-swagger)
*   [Step 5. Install SandboxAdmin (for Sandbox Mode Only)](#step-5-install-sandboxadmin-for-sandbox-mode-only)
*   [Step 6. Restart your Website](#step-6-restart-your-website)

## Step 1. Download the Ed-Fi ODS / API Installer Packages

The Ed-Fi ODS / API installation packages can be downloaded from the following
links:

### Package Links

The required release packages to install the Ed-Fi ODS / API can be found at the
links below. We recommend you stay current with the latest patch update that has
been promoted to
[release](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_packaging?_a=feed&feed=EdFi@Release).

*   [EdFi.Suite3.Installer.WebApi](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Installer.WebApi/versions/6.2.32)
*   [EdFi.Suite3.Installer.SwaggerUI](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Installer.SwaggerUI/versions/6.2.26)
*   [EdFi.Suite3.Installer.SandboxAdmin](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.Installer.SandboxAdmin/versions/6.2.25)
*   [EdFi.Suite3.RestApi.Databases](https://dev.azure.com/ed-fi-alliance/Ed-Fi-Alliance-OSS/_artifacts/feed/EdFi@Release/NuGet/EdFi.Suite3.RestApi.Databases/overview/6.2.2456)  

For each of the downloads, **right-click** and select "Properties." Update the
file extension (from .nupkg to .zip). Remove the version number (optional).
Check the box next to **Unblock** (this will prevent PowerShell from asking for
permission to load every module in the installer) and click **OK**.

![Package Properties](/img/reference/ods-api/unblock.png)

:::info Enable TLS 1.2

You may need to configure TLS while running the installation scripts described
in steps below.

```powershell
[Net.ServicePointManager]::SecurityProtocol += [Net.SecurityProtocolType]::Tls12`
```

:::

:::info Long Paths

File paths can become lengthy within the ODS/API package components. In Windows,
this may cause errors during deployment. To mitigate this, consider extracting
the packages close to the root directory (e.g., `C:\temp`) while running the
installation steps below. Doing so minimizes the risk of encountering
excessively long file paths. Alternatively, you can enable long paths in
Windows.

:::

## Step 2. Install the Ed-Fi Databases

Extract the contents of the EdFi.Suite3.RestApi.Databases package. The paths in
these instructions assume that the package was extracted to a folder with the
name of the package (e.g., C:\\temp\\EdFi.Suite3.RestApi.Databases).

### Edit the configuration.json File

The basic settings for Microsoft SQL Server deployment are provided in configuration.json
and the basic settings for PostgreSQL deployment are provided in configuration.postgreSQL.json file. 
If deploying to PostgreSQL, delete configuration.json file and rename configuration.postgreSQL.json to configuration.json. 
Update the settings in the file to fit your needs. 

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

<Tabs>
  <TabItem value="MSSQL" label="SQL Server" default>
    ```json
    "ConnectionStrings": {
       "EdFi_Ods": "server=(local);trusted_connection=True;database=EdFi_{0};Application Name=EdFi.Ods.WebApi",
        "EdFi_Security": "server=(local);trusted_connection=True;database=EdFi_Security;persist security info=True;Application Name=EdFi.Ods.WebApi",
        "EdFi_Admin": "server=(local);trusted_connection=True;database=EdFi_Admin;Application Name=EdFi.Ods.WebApi",
        "EdFi_Master": "server=(local);trusted_connection=True;database=master;Application Name=EdFi.Ods.WebApi"
    },
    "ApiSettings": {
      "Mode": "Sandbox",
      "Engine": "SQLServer",
      ...
      "MinimalTemplateScript": "TPDMCoreMinimalTemplate",
      "PopulatedTemplateScript": "TPDMCorePopulatedTemplate"
    }
    ```
  </TabItem>
  <TabItem value="PostgreSQL" label="PostgreSQL">
    ```json
  "ConnectionStrings": {
      "EdFi_Ods": "host=localhost;port=5432;username=postgres;database=EdFi_{0};Application Name=EdFi.Ods.WebApi",
      "EdFi_Security": "host=localhost;port=5432;username=postgres;database=EdFi_Security;Application Name=EdFi.Ods.WebApi",
      "EdFi_Admin": "host=localhost;port=5432;username=postgres;database=EdFi_Admin;Application Name=EdFi.Ods.WebApi",
      "EdFi_Master": "host=localhost;port=5432;username=postgres;database=postgres;Application Name=EdFi.Ods.WebApi"
   },
    "InstallType": "Sandbox",
   "ApiSettings": {
    "Mode": "Sandbox",
    "Engine": "PostgreSQL",
    ...
    "MinimalTemplateScript": "TPDMCorePostgreSqlMinimalTemplate",
    "PopulatedTemplateScript": "TPDMCorePostgreSqlPopulatedTemplate"
   }
    ```
  </TabItem>
</Tabs>

:::info

ODS connection strings are now managed with the ODS instance definitions in the
EdFi_Admin database but they can also be overridden using configuration settings
(including external configuration sources such as AWS Systems Manager Parameter
Store).

:::

### Run Installation Script

After you edit the configuration.json file, open a PowerShell window in
Administrator mode and navigate to the EdFi.Suite3.RestApi.Databases package
folder.

Run the following PowerShell command to load modules for installation:

```powershell
Import-Module .\Deployment.psm1
```

Then, execute the following command in PowerShell:

```powershell
Initialize-DeploymentEnvironment

# Alternatively
initdev
```

## Step 3. Install WebApi

Extract the contents of the EdFi.Suite3.Installer.WebApi package. The paths in
these instructions assume that the package was extracted to a folder with the
name of the package (e.g., C:\\temp\\EdFi.Suite3.Installer.WebApi).

### Prepare Installation script

Open a PowerShell window in Administrator mode and navigate to the
EdFi.Suite3.Installer.WebApi package folder and run the following PowerShell
command to load modules for installation:

```powershell
Import-Module .\Install-EdFiOdsWebApi.psm1
```

The WebApi installer can take a number of parameters to tailor the installation
experience (more examples can be found in the Install-EdFiOdsWebApi.psm1 file).
At a minimum, database connection information is required.

Copy and modify the following parameter code to fit your connection information:

<Tabs>
  <TabItem value="MSSQL" label="SQL Server" default>
    ```powershell
    $parameters = @{
        PackageVersion = "6.2.2456"
        DbConnectionInfo = @{
            Engine="SqlServer"
            Server="localhost"
            UseIntegratedSecurity=$true
        }
        InstallType = "Sandbox"
    }
    ```
  </TabItem>
  <TabItem value="PostgreSQL" label="PostgreSQL">
    ```powershell
    $parameters = @{
        PackageVersion = "6.2.2456"
        DbConnectionInfo = @{
            Engine="PostgreSQL"
            Server="localhost"
            Username="postgres"
        }
        InstallType = "Sandbox"
    }
    ```
  </TabItem>
</Tabs>


Paste the modified parameter code into your PowerShell window and hit Enter.

### Run the Installation Script (Web API)

Next, run the following command in the PowerShell window:

```powershell
Install-EdFiOdsWebApi @parameters
```

## Step 4. Install Swagger

Extract the contents of the EdFi.Suite3.Installer.SwaggerUI package. The paths
in these instructions assume that the package was extracted to a folder with the
name of the package (e.g., C:\\temp\\EdFi.Suite3.Installer.SwaggerUI).

### Prepare Installation Script

Open a PowerShell window in Administrator mode and navigate to the
EdFi.Suite3.Installer.SwaggerUI folder and run the following PowerShell command
to load modules for installation:

```powershell
Import-Module .\Install-EdFiOdsSwaggerUI.psm1
```

The Swagger UI installer can take a number of parameters to tailor the install
experience (more examples can be found in the Install-EdFiOdsSwaggerUI.psm1
file). At a minimum, WebAPI connection information is required.

Copy and modify the following parameter code to add your site name:

```powershell
$parameters = @{
    PackageVersion = "6.2.2456"
    WebApiVersionUrl = "https://YOUR_SITE_OR_SERVER_NAME_HERE/WebApi"
 PrePopulatedKey = "YOUR_POPULATED_KEY_HERE"
    PrePopulatedSecret = "YOUR_POPULATED_SECRET_HERE"
}
```

:::info

The PrePopulatedKey and PrePopulatedSecret can be optionally set as parameters
to explicitly set the default authorization key and secret used by Swagger to
connect to the Populated Sandbox Instance created by the Sandbox Admin App.

:::

Paste the modified parameter into your PowerShell window and execute the code.

### Run the Installation Script (Swagger UI)

Then, run the following command in the PowerShell window:

```powershell
Install-EdFiOdsSwaggerUI @parameters
```

## Step 5. Install SandboxAdmin (for Sandbox Mode Only)

Extract the contents of the EdFi.Suite3.Installer.SandboxAdmin package. The
paths in these instructions assume that the package was extracted to a folder
with the name of the package (e.g.,
C:\\temp\\EdFi.Suite3.Installer.SandboxAdmin).

### Prepare Installation Script

Open a PowerShell window in Administrator mode and navigate to the
EdFi.Suite3.Installer.SandboxAdmin folder and run the following PowerShell
command to load modules for installation:

```powershell
Import-Module .\Install-EdFiOdsSandboxAdmin.psm1
```

The SandboxAdmin installer can take a number of parameters to tailor the install
experience (more examples can be found in the Install-EdFiOdsSandboxAdmin.psm1
file). At a minimum, OAuthUrl information is required.

Copy and modify the following parameter code to add your site name:

<Tabs>
  <TabItem value="MSSQL" label="SQL Server" default>
    ```powershell
    $parameters = @{
        PackageVersion = "6.2.2456"
        Settings = @{ OAuthUrl = "https://YOUR_SITE_OR_SERVER_NAME_HERE/WebApi" }	
        PrePopulatedKey = "YOUR_POPULATED_KEY_HERE"
        PrePopulatedSecret = "YOUR_POPULATED_SECRET_HERE"
        UnEncryptedConnection = $true
    }
    ```
  </TabItem>
  <TabItem value="PostgreSQL" label="PostgreSQL">
    ```powershell
    $parameters = @{
        PackageVersion = "6.2.2456"
        Settings = @{ OAuthUrl = "https://YOUR_SITE_OR_SERVER_NAME_HERE/WebApi" }
        Engine="PostgreSQL"
        PrePopulatedKey = "YOUR_POPULATED_KEY_HERE"
        PrePopulatedSecret = "YOUR_POPULATED_SECRET_HERE"
    }
    ```
  </TabItem>
</Tabs>

:::info

The PrePopulatedKey and PrePopulatedSecret can be optionally set as parameters
to explicitly set the default authorization key and secret used by the Populated
Sandbox Instance created by the Sandbox Admin App. If not present, the key and
secret will be set to random strings.

:::

Paste the modified parameter into your PowerShell window and execute the code.

### Run the Installation Script (Sandbox Admin)

Next, run the following command in the PowerShell window:

```powershell
Install-EdFiOdsSandboxAdmin @parameters
```

## Step 6. Restart your Website

Just a few more tasks to complete your installation:

* Open IIS (Press the **Windows key** 🪟 on your keyboard, type **IIS**, select
  **Internet Information Services (IIS)**, and press **Enter**.
* **Right-click** on the server (alternatively, you can right-click the EdFi web
  site), and select **Stop**.
* **Right-click** the server (or EdFi website) again and select **Start**.

You are now ready to use the Ed-Fi ODS / API. The following URLs are available:

| Website                                           | URL                                             |
| ------------------------------------------------- | ----------------------------------------------- |
| Ed-Fi ODS / API                                   | `https://YOUR\_SERVER\_NAME\_HERE/WebApi`       |
| Sandbox Administration (for Sandbox Mode Only) | `https://YOUR\_SERVER\_NAME\_HERE/SandboxAdmin` |
| Ed-Fi ODS / API Documentation                     | `https://YOUR\_SERVER\_NAME\_HERE/SwaggerUI`    |
